# AutoCanny

./: CMakeLists.txt  README.md
include/: auto_canny.h
src/: main.cpp
